--- a/package.json
+++ b/package.json
@@ -13,30 +13,20 @@
     "chart.js": "^4.3.0",
     "Graph": "^0.0.1",
     "i": "^0.3.7",
-    "material-ui-dropzone": "^3.5.0",
     "mobiscroll": "^3.0.0-beta6",
-    "moment": "^2.29.4",
     "npm": "^9.6.6",
-    "rc-time-picker": "^3.7.3",
     "react": "^18.2.0",
-    "react-big-calendar": "^1.6.9",
     "react-calendar": "^4.2.1",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-client-session": "^0.0.8",
-    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
-    "react-dropdown": "^1.11.0",
     "react-icons": "^4.8.0",
     "react-ios-time-picker": "^0.2.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
-    "react-select": "^5.7.3",
-    "react-time-picker": "^6.0.4",
-    "react-time-picker-input": "^2.0.10",
-    "react-toastify": "^9.1.3",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^9.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
