--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fullcalendar/daygrid": "^6.1.7",
     "@fullcalendar/react": "^6.1.7",
+    "@mui/base": "^5.0.0-beta.8",
+    "@mui/material": "^5.14.1",
     "@syncfusion/ej2-react-calendars": "^21.2.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.7.2",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "Graph": "^0.0.1",
     "i": "^0.3.7",
